--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
 
     volumes:
       - .:/var/app/flap
-    command: python manage.py runserver 0.0.0.0:8000
+    command: gunicorn -b :8000 FlapWeb.wsgi
 
   pg_flap:
     container_name: pg_flap
