Loading DB, timeout problem

--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ pytz==2018.5
 django-cors-headers==2.4.0
 djangorestframework==3.9.0
 gunicorn==19.9.0
+scipy==1.1.0
+numpy==1.15.4
+pandas==0.23.4
+django-pandas==0.5.1
+openpyxl==2.5.9
