--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 Django==2.1.2
+django-cors-headers==2.4.0
+django-extensions==2.1.3
+django-pandas==0.5.1
+djangorestframework==3.9.0
+et-xmlfile==1.0.1
+gunicorn==19.9.0
+jdcal==1.4
+numpy==1.15.4
+openpyxl==2.5.9
+pandas==0.23.4
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+python-dateutil==2.7.5
 pytz==2018.5
-django-cors-headers==2.4.0
-djangorestframework==3.9.0
-gunicorn==19.9.0
 scipy==1.1.0
-numpy==1.15.4
-pandas==0.23.4
-django-pandas==0.5.1
-openpyxl==2.5.9
+six==1.11.0
