--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,6 @@ python-dateutil==2.7.5
 pytz==2018.5
 scipy==1.1.0
 six==1.11.0
+matplotlib==3.0.2
+Jinja2==2.10
+git+git://github.com/mpld3/mpld3@master#egg=mpld3
