--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+cycler==0.10.0
 Django==2.1.2
 django-cors-headers==2.4.0
 django-extensions==2.1.3
@@ -6,16 +7,19 @@ djangorestframework==3.9.0
 et-xmlfile==1.0.1
 gunicorn==19.9.0
 jdcal==1.4
+Jinja2==2.10
+kiwisolver==1.0.1
+MarkupSafe==1.1.0
+matplotlib==3.0.2
+mpld3==0.3.1.dev1
 numpy==1.15.4
 openpyxl==2.5.9
 pandas==0.23.4
+Pillow==5.3.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+pyparsing==2.3.0
 python-dateutil==2.7.5
 pytz==2018.5
 scipy==1.1.0
 six==1.11.0
-matplotlib==3.0.2
-Jinja2==2.10
-git+git://github.com/mpld3/mpld3@master#egg=mpld3
-pillow=5.3.0
