--- a/requirements.txt
+++ b/requirements.txt
@@ -11,7 +11,7 @@ Jinja2==2.10
 kiwisolver==1.0.1
 MarkupSafe==1.1.0
 matplotlib==3.0.2
-mpld3==0.3.1.dev1
+git+git://github.com/mpld3/mpld3@master#egg=mpld3
 numpy==1.15.4
 openpyxl==2.5.9
 pandas==0.23.4
